--- a/kARTography/res/layout/activity_take_photo.xml
+++ b/kARTography/res/layout/activity_take_photo.xml
@@ -36,7 +36,7 @@
             android:imeOptions="actionNext"
             android:singleLine="true"
             android:layout_marginBottom="20dp"
-            android:background="#ccc"
+            
             android:ems="10"
             android:hint="@string/hintTitle" >
 
@@ -64,7 +64,7 @@
             android:layout_gravity="center"
             android:layout_marginBottom="20dp"
             android:singleLine="true"
-            android:background="#ccc"
+            android:minLines="2"
             android:ems="10"
             android:hint="@string/hintAuthor" >
 
@@ -78,7 +78,6 @@
             android:imeOptions="actionDone"
             android:layout_gravity="center"
             android:layout_marginBottom="20dp"
-            android:background="#ccc"
             android:ems="10"
             android:hint="@string/hintDescription" >
 
@@ -90,8 +89,9 @@
     <Button
         android:id="@+id/btn_submitPhoto"
         android:layout_width="200dp"
-        android:background="#D0D"
+        
         android:textColor="#FFF"
+        android:background="@drawable/selector_nice_button"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
