--- a/kARTography/res/layout/item_list_poi.xml
+++ b/kARTography/res/layout/item_list_poi.xml
@@ -14,7 +14,7 @@
         android:scaleType="centerCrop" />
 
     <ImageView
-        android:id="@+id/ivBottomGradient"
+        android:id="@+id/ivLocationMini"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
