--- a/kARTography/res/layout/poi_detail.xml
+++ b/kARTography/res/layout/poi_detail.xml
@@ -99,32 +99,31 @@
                     android:padding="1dp"
                     android:layout_marginLeft="16dp"
                     android:layout_marginRight="16dp"
-                    android:background="#c8c8c8"
-                    >
+                    android:background="@drawable/round_edge_border" >
                 
 	                <RelativeLayout
 	                    android:layout_width="match_parent"
 	                    android:layout_height="wrap_content"
 	                    android:layout_marginBottom="8dp" 
-	                    android:background="#ffffff"
+	                    android:background="@drawable/round_edge_textview"
 	                    android:padding="4dp"
 	                    android:paddingBottom="4dp" >
 	
 	                    <ImageView
-	                        android:id="@+id/ivBottomGradient"
+	                        android:id="@+id/ivLocationMini"
 	                        android:layout_width="30dp"
 	                        android:layout_height="30dp"
-	                        android:layout_marginLeft="5dp"
 	                        android:layout_alignParentLeft="true"
+	                        android:layout_marginLeft="5dp"
 	                        android:src="@drawable/ic_pin_mini_green" />
 	
 	                    <TextView
 	                        android:id="@+id/tvLocation"
 	                        android:layout_width="wrap_content"
 	                        android:layout_height="wrap_content"
-	                        android:layout_alignTop="@+id/ivBottomGradient"
+	                        android:layout_alignTop="@+id/ivLocationMini"
 	                        android:layout_marginLeft="10dp"
-	                        android:layout_toRightOf="@+id/ivBottomGradient"
+	                        android:layout_toRightOf="@+id/ivLocationMini"
 	                        android:text="@string/location"
 	                        android:textSize="14sp" />
 	                </RelativeLayout>
@@ -138,32 +137,31 @@
                     android:paddingRight="1dp"
                     android:layout_marginLeft="16dp"
 	                android:layout_marginRight="16dp"
-                    android:background="#c8c8c8"
-                    android:layout_marginBottom="24dp"
-                    >
+                    android:background="@drawable/round_edge_border"
+                    android:layout_marginBottom="24dp" >
 	                <RelativeLayout
 	                    android:layout_width="match_parent"
 	                    android:layout_height="wrap_content"
-	                    android:background="#ffffff"
+	                    android:background="@drawable/round_edge_textview"
 	                    android:padding="4dp"
 	                    android:paddingBottom="4dp" >
 	
 	                    <ImageView
-	                        android:id="@+id/imageView2"
+	                        android:id="@+id/ivPersonMini"
 	                        android:layout_width="30dp"
 	                        android:layout_height="30dp"
-	                        android:layout_marginLeft="5dp"
 	                        android:layout_alignParentLeft="true"
 	                        android:layout_centerVertical="true"
+	                        android:layout_marginLeft="5dp"
 	                        android:src="@drawable/ic_person_mini_green" />
 	
 	                    <TextView
 	                        android:id="@+id/tvArtist"
 	                        android:layout_width="wrap_content"
 	                        android:layout_height="wrap_content"
-	                        android:layout_alignTop="@+id/imageView2"
+	                        android:layout_alignTop="@+id/ivPersonMini"
 	                        android:layout_marginLeft="10dp"
-	                        android:layout_toRightOf="@+id/imageView2"
+	                        android:layout_toRightOf="@+id/ivPersonMini"
 	                        android:text="@string/artist"
 	                        android:textSize="14sp" />
 	                </RelativeLayout>
@@ -174,7 +172,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="1dp"
-                    android:background="#c8c8c8"
+                    android:background="@drawable/round_edge_border"
                     android:layout_marginLeft="16dp"
                     android:layout_marginRight="16dp"
                     >
