--- a/kARTography/res/layout/poi_detail.xml
+++ b/kARTography/res/layout/poi_detail.xml
@@ -214,7 +214,7 @@
 	                    android:layout_width="match_parent"
 	                    android:layout_height="wrap_content"
 	                    android:layout_marginBottom="16dp"
-	                    android:background="#fff"
+	                    android:background="@drawable/round_edge_border"
 	                    android:padding="4dp"
 	                    android:paddingBottom="4dp" >
 	
