--- a/kARTography/res/drawable/nice_button_pressed.xml
+++ b/kARTography/res/drawable/nice_button_pressed.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <stroke android:color="#ff0dff" android:width="1dp"/>
-       <gradient android:type="linear" android:startColor="#ff7373" android:endColor="#a60000"/>
+    <!-- <stroke android:color="#ff0dff" android:width="1dp"/> -->
+       <gradient android:type="linear" android:startColor="#087F00" android:endColor="#066500" android:angle="90"/>
        <padding android:left="4dp" android:top="4dp" android:right="4dp" android:bottom="4dp"/>
        <corners android:radius="3dp"/>
 
