--- a/kARTography/res/layout/activity_take_photo.xml
+++ b/kARTography/res/layout/activity_take_photo.xml
@@ -6,7 +6,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".TakePhotoActivity" >
+    tools:context=".TakePhotoActivity" 
+    android:background="#efefef"
+    >
 
     <LinearLayout
         android:id="@+id/ll_takePhoto"
@@ -18,16 +20,22 @@
         android:layout_alignParentTop="true"
         android:orientation="vertical" >
 
-        <ImageView
-            android:id="@+id/iv_Photo"
+        <RelativeLayout 
             android:layout_width="match_parent"
-            android:layout_height="128dp"
-            android:padding="5dp"
-            android:layout_marginBottom="20dp"
-            android:layout_gravity="center"
-            android:onClick="onTakePicture"
-            android:src="@drawable/img_camera" />
+	        android:layout_height="128dp">
 
+	        <ImageView
+	            android:id="@+id/iv_Photo"
+	            android:layout_width="match_parent"
+	            android:layout_height="228dp"
+	            android:padding="5dp"
+	            android:layout_marginBottom="20dp"
+	            android:layout_gravity="center"
+	        	android:onClick="onTakePicture"    
+	            android:src="@drawable/img_camera" />
+	        
+		</RelativeLayout>
+		
         <EditText
             android:id="@+id/et_title"
             android:layout_width="250dp"
@@ -36,25 +44,11 @@
             android:imeOptions="actionNext"
             android:singleLine="true"
             android:layout_marginBottom="20dp"
-            
             android:ems="10"
             android:hint="@string/hintTitle" >
 
             <requestFocus />
         </EditText>
-        
-       <!--  <EditText
-            android:id="@+id/et_location"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="20dp"
-            android:background="#ccc"
-            android:ems="10"
-            android:hint="@string/hintLocation" >
-
-            <requestFocus />
-        </EditText> -->
         
         <EditText
             android:id="@+id/et_author"
@@ -89,7 +83,6 @@
     <Button
         android:id="@+id/btn_submitPhoto"
         android:layout_width="200dp"
-        
         android:textColor="#FFF"
         android:background="@drawable/selector_nice_button"
         android:layout_height="wrap_content"
