--- a/kARTography/res/layout/poi_detail.xml
+++ b/kARTography/res/layout/poi_detail.xml
@@ -28,12 +28,7 @@
             android:onClick="onSetFavorited"
             android:src="@drawable/ic_fav_unselected" />
 
-        <ProgressBar
-            android:id="@+id/pbImageLoad"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true" />
+        
 
     </RelativeLayout>
     <ScrollView
@@ -172,7 +167,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="1dp"
-                    android:background="@drawable/round_edge_border"
+                    android:background="@drawable/green_round_edge_border"
                     android:layout_marginLeft="16dp"
                     android:layout_marginRight="16dp"
                     >
@@ -201,12 +196,10 @@
                 <RelativeLayout 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingBottom="1dp"
-                    android:paddingLeft="1dp"
-                    android:paddingRight="1dp"
+                    android:padding="1dp"
                     android:layout_marginLeft="16dp"
 	                android:layout_marginRight="16dp"
-                    android:background="#c8c8c8"
+	                android:background="@drawable/round_edge_border"
                     android:layout_marginBottom="24dp"
                     >
 	                
@@ -214,7 +207,8 @@
 	                    android:layout_width="match_parent"
 	                    android:layout_height="wrap_content"
 	                    android:layout_marginBottom="16dp"
-	                    android:background="@drawable/round_edge_border"
+	                    android:background="#ffffff"
+	                    
 	                    android:padding="4dp"
 	                    android:paddingBottom="4dp" >
 	
