--- a/kARTography/res/layout/poi_detail.xml
+++ b/kARTography/res/layout/poi_detail.xml
@@ -206,15 +206,14 @@
                     android:paddingRight="1dp"
                     android:layout_marginLeft="16dp"
 	                android:layout_marginRight="16dp"
-                    android:background="#c8c8c8"
-                    android:layout_marginBottom="24dp"
-                    >
+                    android:background="@drawable/round_edge_border"
+                    android:layout_marginBottom="24dp" >
 	                
 	                <RelativeLayout
 	                    android:layout_width="match_parent"
 	                    android:layout_height="wrap_content"
 	                    android:layout_marginBottom="16dp"
-	                    android:background="@drawable/round_edge_border"
+	                    android:background="#ffffff"
 	                    android:padding="4dp"
 	                    android:paddingBottom="4dp" >
 	
