--- a/kARTography/res/layout/activity_take_photo.xml
+++ b/kARTography/res/layout/activity_take_photo.xml
@@ -9,30 +9,48 @@
     tools:context=".TakePhotoActivity" 
     android:background="#efefef"
     >
+	<ScrollView
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	     >
 
     <LinearLayout
         android:id="@+id/ll_takePhoto"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:descendantFocusability="beforeDescendants"
+		android:focusableInTouchMode="true"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
         android:orientation="vertical" >
 
         <RelativeLayout 
             android:layout_width="match_parent"
-	        android:layout_height="128dp">
+            android:paddingTop="23dp"
+            android:paddingLeft="18dp"
+            android:paddingRight="21dp"
+            android:background="@drawable/poloroid_blank"
+	        android:layout_height="wrap_content">
 
 	        <ImageView
 	            android:id="@+id/iv_Photo"
 	            android:layout_width="match_parent"
-	            android:layout_height="228dp"
-	            android:padding="5dp"
-	            android:layout_marginBottom="20dp"
+	            android:layout_height="wrap_content"
 	            android:layout_gravity="center"
-	        	android:onClick="onTakePicture"    
-	            android:src="@drawable/img_camera" />
+	            android:layout_marginBottom="20dp"
+	            android:background="#000000"
+	            android:onClick="onTakePicture"
+	            android:src="@drawable/poloroid_space" />
+
+				<!-- android:layout_margin="8dp" -->
+	        <TextView
+	            android:id="@+id/tv_Photo"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_marginTop="10dp"
+	            android:layout_alignTop="@+id/iv_Photo"
+	            android:layout_centerHorizontal="true"
+	            android:text="@string/tap_to"
+	            android:textColor="@android:color/white"
+	            android:textAppearance="?android:attr/textAppearanceMedium" />
 	        
 		</RelativeLayout>
 		
@@ -43,11 +61,11 @@
             android:layout_gravity="center"
             android:imeOptions="actionNext"
             android:singleLine="true"
-            android:layout_marginBottom="20dp"
+            
             android:ems="10"
             android:hint="@string/hintTitle" >
 
-            <requestFocus />
+            
         </EditText>
         
         <EditText
@@ -56,13 +74,13 @@
             android:imeOptions="actionNext"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="20dp"
+            
             android:singleLine="true"
             android:minLines="2"
             android:ems="10"
             android:hint="@string/hintAuthor" >
 
-            <requestFocus />
+
         </EditText>
         
         <EditText
@@ -75,21 +93,18 @@
             android:ems="10"
             android:hint="@string/hintDescription" >
 
-            <requestFocus />
+            
         </EditText>
 
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/btn_submitPhoto"
-        android:layout_width="200dp"
-        android:textColor="#FFF"
-        android:background="@drawable/selector_nice_button"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:onClick="onSavePOI"
-        android:text="@string/submitPhoto" />
+        <Button
+            android:id="@+id/btn_submitPhoto"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/selector_nice_button"
+            android:layout_gravity="center_horizontal"
+            android:onClick="onSavePOI"
+            android:text="@string/submitPhoto"
+            android:textColor="#FFF" />
 
     <ProgressBar
         android:id="@+id/pbLoading"
@@ -97,7 +112,8 @@
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/ll_takePhoto"
+        
         android:layout_centerHorizontal="true" />
-
+ </LinearLayout>
+ </ScrollView>
 </RelativeLayout>
