FINALLY style the actionbar tabs

--- a/kARTography/res/values/styles.xml
+++ b/kARTography/res/values/styles.xml
@@ -11,13 +11,16 @@
             res/values-vXX/styles.xml, while customizations related to
             backward-compatibility can go here.		<item name="android:actionBarTabStyle">@style/ActionBarTabStyle.Example</item>
         -->
-        <item name="android:actionBarTabStyle">@style/ActionBarTabStyle.Kartography</item>
+        
     </style>
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-        <!-- <item name="android:textSize">@style/SmallFont</item>-->
+        <item name="android:actionBarTabStyle">@style/MyActionBarTabs</item>
+    
+    <item name="android:actionOverflowButtonStyle">@style/MyActionButtonOverflow</item>
+   <!--  <item name="android:actionBarTabBarStyle">@style/MyActionBarTabs</item> -->
     </style>
 
     <style name="ShadowText">
@@ -30,8 +33,29 @@
         <item name="android:shadowRadius">2</item>
     </style>
     
-    <style name="ActionBarTabStyle.Kartography" parent="@android:style/Widget.Holo.ActionBar.TabView">
-        <item name="android:background">@drawable/tab_indicator_ab_kartography</item>
+      <!-- the theme applied to the application or activity -->
+
+
+    <!-- ActionBar tabs styles -->
+     <!--  <style name="MyActionBarTabs" parent="@style/Widget.ActionBar.TabBar">
+        
+        <item name="android:background">#ffffff</item>
+    </style>  --> 
+    
+    <!-- <style name="MyTheme" parent="android:style/Theme.Holo.Light">
+    	
+	</style> -->
+
+	<style name="MyActionBarTabs" parent="@android:style/Widget.Holo.ActionBar.TabView">
+	    <item name="android:background">@drawable/tab_indicator_ab_kartography</item>
+	</style>	
+
+	<style name="MyActionButtonOverflow" parent="android:style/Widget.Holo.ActionButton.Overflow">
+	    <item name="android:src">@drawable/ic_overflow</item>
+	</style>	
+    
+    <style name="ActionBarTabStyle.Kartography" parent="@android:style/Widget.Holo.Light.ActionBar.TabView">
+        
     </style>
     
     <style name="micro_font">
