--- a/kARTography/res/layout/activity_take_photo.xml
+++ b/kARTography/res/layout/activity_take_photo.xml
@@ -53,28 +53,66 @@
 	            android:textAppearance="?android:attr/textAppearanceMedium" />
 	        
 		</RelativeLayout>
-		
-        <EditText
-            android:id="@+id/et_title"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:imeOptions="actionNext"
-            android:singleLine="true"
-            
-            android:ems="10"
-            android:hint="@string/hintTitle" >
+		<View android:id="@+id/separator" 
+ 			android:background="#087f00" 
+ 			android:layout_marginTop="20dp"
+ 			android:layout_width = "fill_parent"
+ 			android:layout_height="1dip"
+ 			/>
+		<LinearLayout 
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_marginTop="10dp"
+		    android:orientation="horizontal"
+		    android:layout_gravity="center"
+		    >
 
-            
-        </EditText>
-        
+			<ImageView
+			    android:id="@+id/icon_title"
+			    android:layout_width="30dp"
+				android:layout_height="30dp"
+				
+			    android:src="@drawable/ic_title" />
+		
+	        <EditText
+	            android:layout_marginRight="7dp"
+	            android:id="@+id/et_title"
+	            android:layout_width="250dp"
+	            android:layout_height="wrap_content"
+	            android:background="#efefef"
+	            android:imeOptions="actionNext"
+	            android:singleLine="true"
+	            android:ems="10"
+	            android:hint="@string/hintTitle" ></EditText>
+          </LinearLayout>
+          
+        <View android:id="@+id/separator" 
+ 			android:background="#087f00" 
+ 			android:layout_marginTop="10dp"
+ 			android:layout_width = "fill_parent"
+ 			android:layout_height="1dip"
+ 			/>
+        <LinearLayout 
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:orientation="horizontal"
+		    android:layout_marginTop="10dp"
+		    android:layout_gravity="center"
+		    >
+        <ImageView
+			    android:id="@+id/icon_artist"
+			    android:layout_width="30dp"
+				android:layout_height="30dp"
+			
+			    android:src="@drawable/ic_person_mini_green" />
         <EditText
             android:id="@+id/et_author"
             android:layout_width="250dp"
             android:imeOptions="actionNext"
             android:layout_height="wrap_content"
+            android:layout_marginRight="7dp"
             android:layout_gravity="center"
-            
+            android:background="#efefef"
             android:singleLine="true"
             android:minLines="2"
             android:ems="10"
@@ -83,19 +121,52 @@
 
         </EditText>
         
+        </LinearLayout>
+        
+        <View android:id="@+id/separator" 
+ 			android:background="#087f00" 
+ 			android:layout_marginTop="10dp"
+ 			android:layout_width = "fill_parent"
+ 			android:layout_height="1dip"
+ 			/>
+        
+        <LinearLayout 
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_marginTop="10dp"
+		    android:orientation="horizontal"
+		    android:layout_gravity="center"
+		    >
+        <ImageView
+			    android:id="@+id/icon_desc"
+			    android:layout_width="30dp"
+			     android:layout_marginTop="5dp"
+			     
+				android:layout_height="30dp"
+			    android:src="@drawable/ic_description" />
         <EditText
             android:id="@+id/et_description"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:imeOptions="actionDone"
             android:layout_gravity="center"
-            android:layout_marginBottom="20dp"
+            android:layout_marginRight="7dp"
+            android:background="#efefef"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
             android:ems="10"
             android:hint="@string/hintDescription" >
 
             
         </EditText>
-
+        
+        </LinearLayout>
+		<View android:id="@+id/separator" 
+ 			android:background="#087f00" 
+ 			android:layout_marginBottom="20dp"
+ 			android:layout_width = "fill_parent"
+ 			android:layout_height="1dip"
+ 			/>
         <Button
             android:id="@+id/btn_submitPhoto"
             android:layout_width="200dp"
@@ -106,14 +177,15 @@
             android:text="@string/submitPhoto"
             android:textColor="#FFF" />
 
-    <ProgressBar
-        android:id="@+id/pbLoading"
-  		android:visibility="invisible"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        
-        android:layout_centerHorizontal="true" />
+	 	<ProgressBar
+	        android:id="@+id/pbLoading"
+	  		android:visibility="invisible"
+	        style="?android:attr/progressBarStyleLarge"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center_horizontal"
+	         />   
  </LinearLayout>
+ 
  </ScrollView>
 </RelativeLayout>
