--- a/kARTography/res/layout/activity_login_home.xml
+++ b/kARTography/res/layout/activity_login_home.xml
@@ -9,9 +9,44 @@
         android:id="@+id/ivLoginBG"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:adjustViewBounds="false" 
-        android:scaleType="fitXY"
+        android:adjustViewBounds="false"
+        android:alpha=".55"
         android:padding="0dp"
-        android:src="@drawable/bg_signin"/>
+        android:scaleType="fitXY"
+        android:src="@drawable/bg_signin" />
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="24dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true" >
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/btnHomeLogin"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/btnHomeCreate"
+        android:layout_marginRight="30dp"
+        android:background="@drawable/selector_nice_button"
+        android:onClick="onLoginAccount"
+        android:text="@string/loginLowercase"
+        android:textColor="#FFF" />
+
+    <Button
+        android:id="@+id/btnHomeCreate"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
+        android:layout_above="@+id/relativeLayout1"
+        android:layout_marginBottom="14dp"
+        android:layout_marginRight="30dp"
+        android:layout_toLeftOf="@+id/btnHomeLogin"
+        android:background="@drawable/selector_nice_button"
+        android:onClick="onCreateAccount"
+        android:text="@string/createAccountLowercase"
+        android:textColor="#FFF" />
 
 </RelativeLayout>
