--- a/kARTography/res/layout/fragment_login.xml
+++ b/kARTography/res/layout/fragment_login.xml
@@ -22,57 +22,34 @@
     </EditText>
 
     <EditText
-        android:id="@+id/etEnterEmail"
-        android:inputType="textEmailAddress"
+        android:id="@+id/etEnterPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/etCreateUsername"
         android:ems="10"
-        android:hint="@string/enterEmail" />
-
-    <EditText
-        android:id="@+id/etEnterPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/etEnterEmail"
-        android:ems="10"
         android:hint="@string/enterPassword"
-        android:inputType="textPassword" />
-
-    <EditText
-        android:id="@+id/etReEnterPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/etEnterPassword"
-        android:ems="10"
-        android:hint="@string/reenterpassword"
         android:inputType="textPassword" />
 
     <Button
         android:id="@+id/btnLoginAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/etReEnterPassword"
-        android:layout_below="@+id/etReEnterPassword"
-        android:layout_marginLeft="38dp"
-        android:layout_marginTop="19dp"
+        android:layout_alignLeft="@+id/etEnterPassword"
+        android:layout_below="@+id/etEnterPassword"
+        android:layout_marginLeft="34dp"
+        android:layout_marginTop="22dp"
         android:onClick="onCreateUser"
-        android:text="@string/createAccount" />
+        android:text="@string/loginLowercase" />
 
     <Button
-        android:id="@+id/btnCreateCancel"
+        android:id="@+id/btnLoginCancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/btnLoginAccount"
         android:layout_alignBottom="@+id/btnLoginAccount"
-        android:layout_marginLeft="37dp"
-        android:layout_toRightOf="@+id/btnLoginAccount"
+        android:layout_alignRight="@+id/etEnterPassword"
+        android:layout_marginRight="50dp"
         android:text="@string/cancel" />
 
 </RelativeLayout>
