--- a/kARTography/res/values/styles.xml
+++ b/kARTography/res/values/styles.xml
@@ -67,5 +67,9 @@
     </style>
 
     <style name="ButtonBarButton" />
+    
+    <style name="DialogFragmentGreen">
+        <item name="android:textColor">#087f00</item>
+    </style>
 
 </resources>
