--- a/kARTography/res/layout/activity_take_photo.xml
+++ b/kARTography/res/layout/activity_take_photo.xml
@@ -2,10 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+  
     tools:context=".TakePhotoActivity" 
     android:background="#efefef"
     >
@@ -25,7 +22,17 @@
 
         <RelativeLayout 
             android:layout_width="match_parent"
+            android:background="@drawable/wood"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+    		android:paddingLeft="@dimen/activity_horizontal_margin"
+    		android:paddingRight="@dimen/activity_horizontal_margin"
+    		android:paddingTop="@dimen/activity_vertical_margin"
+	        android:layout_height="wrap_content">
+        
+        <RelativeLayout 
+            android:layout_width="match_parent"
             android:paddingTop="21dp"
+            
             android:paddingLeft="18dp"
             android:paddingRight="21dp"
             android:background="@drawable/poloroid_blank"
@@ -51,17 +58,11 @@
 	            android:layout_centerHorizontal="true"
 	            android:text="@string/tap_to"
 	            android:textColor="@android:color/white"
-	            android:textAppearance="?android:attr/textAppearanceMedium" />
+	            android:textAppearance="?android:attr/textAppearanceLarge" />
 
-	        <ProgressBar
-	            android:id="@+id/pbLoading"
-	            style="?android:attr/progressBarStyleLarge"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:layout_centerHorizontal="true"
-	            android:layout_centerVertical="true"
-	            android:visibility="invisible" />
 	        
+	        
+		</RelativeLayout>
 		</RelativeLayout>
 		<View android:id="@+id/separator" 
  			android:background="#087f00" 
@@ -186,6 +187,15 @@
             android:onClick="onSavePOI"
             android:text="@string/submitPhoto"
             android:textColor="#FFF" />   
+            
+        <ProgressBar
+	            android:id="@+id/pbLoading"
+	            style="?android:attr/progressBarStyleLarge"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            
+	            android:layout_gravity="center_horizontal"
+	            android:visibility="invisible" />
  </LinearLayout>
  
  </ScrollView>
