--- a/kARTography/res/layout/fragment_login.xml
+++ b/kARTography/res/layout/fragment_login.xml
@@ -16,6 +16,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:ems="10"
+        android:background="@drawable/greendialog_edit_text_holo_light"
         android:hint="@string/enterUsername" >
 
         <requestFocus />
@@ -29,27 +30,32 @@
         android:layout_alignParentRight="true"
         android:layout_below="@+id/etCreateUsername"
         android:ems="10"
+        android:background="@drawable/greendialog_edit_text_holo_light"
         android:hint="@string/enterPassword"
         android:inputType="textPassword" />
 
     <Button
         android:id="@+id/btnLoginAccount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
         android:layout_alignLeft="@+id/etEnterPassword"
         android:layout_below="@+id/etEnterPassword"
-        android:layout_marginLeft="34dp"
+        android:layout_marginLeft="31dp"
         android:layout_marginTop="22dp"
         android:onClick="onCreateUser"
+        android:background="@drawable/selector_nice_button"
+        android:textColor="#FFF"
         android:text="@string/loginLowercase" />
 
     <Button
         android:id="@+id/btnLoginCancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
         android:layout_alignBottom="@+id/btnLoginAccount"
         android:layout_alignRight="@+id/etEnterPassword"
         android:layout_marginRight="50dp"
+        android:background="@drawable/selector_nice_button"
+        android:textColor="#FFF"
         android:text="@string/cancel" />
 
 </RelativeLayout>
